--- a/Front---End/src/app/user-profile/user-profile.component.html
+++ b/Front---End/src/app/user-profile/user-profile.component.html
@@ -69,6 +69,17 @@
                             Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
                         </p>
                         <a href="javascript:void(0)" class="btn btn-danger btn-round">Follow</a>
+                                <form #imageForm=ngForm (ngSubmit)="OnSubmit(Caption,Image)">
+                                  <div class="row">
+                                    <div class="input-field col s12">
+                                      <input type="text" #Caption ngModel name="Caption" id="Caption" required>
+                                      <label for="Caption">Caption</label>
+                                    </div>
+                                  </div>
+                                  <img [src]="imageUrl"  style="width:250px;height:200px">
+                                  <input type="file" #Image accept="image/*" (change)="handleFileInput($event.target.files)">
+                                  <button type="submit" class="btn-large btn-submit" [disabled]="Image.value=='' || !imageForm.valid">Submit</button>
+                                </form>
                     </div>
                 </div>
             </div>
