--- a/Front---End/src/app/dashboard/dashboard.component.html
+++ b/Front---End/src/app/dashboard/dashboard.component.html
@@ -7,9 +7,9 @@
                       <div class="card-icon">
                           <i class="material-icons">content_copy</i>
                       </div>
-                      <p class="card-category">Used Space</p>
-                      <h3 class="card-title">49/50
-                          <small>GB</small>
+                      <p class="card-category">Bike</p>
+                      <h3 class="card-title">234
+                          <small>KM</small>
                       </h3>
                   </div>
                   <div class="card-footer">
@@ -26,8 +26,8 @@
                       <div class="card-icon">
                           <i class="material-icons">store</i>
                       </div>
-                      <p class="card-category">Revenue</p>
-                      <h3 class="card-title">$34,245</h3>
+                      <p class="card-category">Skateboard</p>
+                      <h3 class="card-title">100 KM</h3>
                   </div>
                   <div class="card-footer">
                       <div class="stats">
@@ -42,8 +42,8 @@
                       <div class="card-icon">
                           <i class="material-icons">info_outline</i>
                       </div>
-                      <p class="card-category">Fixed Issues</p>
-                      <h3 class="card-title">75</h3>
+                      <p class="card-category">Rolls</p>
+                      <h3 class="card-title">75 KM</h3>
                   </div>
                   <div class="card-footer">
                       <div class="stats">
@@ -70,13 +70,29 @@
           </div>
       </div>
       <div class="row">
+        <div class="col-md-4">
+            <div class="card card-chart">
+                <div class="card-header card-header-danger">
+                    <div class="ct-chart" id="completedTasksChart"></div>
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Daily XP</h4>
+                    <p class="card-category">Last Campaign Performance</p>
+                </div>
+                <div class="card-footer">
+                    <div class="stats">
+                        <i class="material-icons">access_time</i> campaign sent 2 days ago
+                    </div>
+                </div>
+            </div>
+        </div>
           <div class="col-md-4">
               <div class="card card-chart">
                   <div class="card-header card-header-success">
                       <div class="ct-chart" id="dailySalesChart"></div>
                   </div>
                   <div class="card-body">
-                      <h4 class="card-title">Daily Sales</h4>
+                      <h4 class="card-title">Weekly XP</h4>
                       <p class="card-category">
                           <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today sales.</p>
                   </div>
@@ -93,23 +109,7 @@
                       <div class="ct-chart" id="websiteViewsChart"></div>
                   </div>
                   <div class="card-body">
-                      <h4 class="card-title">Email Subscriptions</h4>
-                      <p class="card-category">Last Campaign Performance</p>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons">access_time</i> campaign sent 2 days ago
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-4">
-              <div class="card card-chart">
-                  <div class="card-header card-header-danger">
-                      <div class="ct-chart" id="completedTasksChart"></div>
-                  </div>
-                  <div class="card-body">
-                      <h4 class="card-title">Completed Tasks</h4>
+                      <h4 class="card-title">Monthly XP</h4>
                       <p class="card-category">Last Campaign Performance</p>
                   </div>
                   <div class="card-footer">
@@ -153,7 +153,7 @@
                   <div class="card-body">
                       <div class="tab-content">
                           <div class="tab-pane active" id="profile">
-                              <table class="table">
+                              <!-- <table class="table">
                                   <tbody>
                                       <tr>
                                           <td>
@@ -241,7 +241,7 @@
                                           </td>
                                       </tr>
                                   </tbody>
-                              </table>
+                              </table> -->
                           </div>
                           <div class="tab-pane" id="messages">
                               <table class="table">
@@ -368,7 +368,7 @@
           </div>
           <div class="col-lg-6 col-md-12">
               <div class="card">
-                  <div class="card-header card-header-warning">
+                  <div class="card-header card-header-success">
                       <h4 class="card-title">Employees Stats</h4>
                       <p class="card-category">New employees on 15th September, 2016</p>
                   </div>
