--- a/Front---End/src/app/stolen-vehicles/stolen-vehicles.component.html
+++ b/Front---End/src/app/stolen-vehicles/stolen-vehicles.component.html
@@ -25,6 +25,12 @@
                                 <th>
                                     Serial Number
                                 </th>
+                                <th>
+                                    Photo
+                                </th>
+                                <th>
+                                    Profile
+                                </th>
                             </thead>
                             <tbody>
                                 <tr>
@@ -43,6 +49,12 @@
                                     <td class="text-primary">
                                         367389090
                                     </td>
+                                    <td>
+                                        BikePhoto
+                                    </td>
+                                    <td>
+                                        Godzilla
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>
@@ -60,6 +72,12 @@
                                     <td class="text-primary">
                                         3003030303
                                     </td>
+                                    <td>
+                                        SkateBoardPhoto
+                                    </td>
+                                    <td>
+                                        Rex
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>
@@ -76,6 +94,12 @@
                                     </td>
                                     <td class="text-primary">
                                         9099999999
+                                    </td>
+                                    <td>
+                                        RollsPhoto
+                                    </td>
+                                    <td>
+                                        Spicky
                                     </td>
                                 </tr>
                             </tbody>
