--- a/Front---End/src/app/table-list/table-list.component.html
+++ b/Front---End/src/app/table-list/table-list.component.html
@@ -102,7 +102,7 @@
                                         Name
                                     </th>
                                     <th>
-                                        Company
+                                        City
                                     </th>
                                     <th>
                                         Country
@@ -120,7 +120,7 @@
                                             Yehonatan Shyam
                                         </td>
                                         <td>
-                                            IBM
+                                            Arad
                                         </td>
                                         <td>
                                             Romania
@@ -137,7 +137,7 @@
                                             William Cooper
                                         </td>
                                         <td>
-                                            Visma
+                                            Wien
                                         </td>
                                         <td>
                                             Austria
@@ -154,7 +154,7 @@
                                             Doris Greene
                                         </td>
                                         <td>
-                                            Atos
+                                            Barcelona
                                         </td>
                                         <td>
                                             Spain
