--- a/Front---End/src/app/components/navbar/navbar.component.html
+++ b/Front---End/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-transparent  navbar-absolute fixed-top">
+<!-- <nav class="navbar navbar-expand-lg navbar-transparent  navbar-absolute fixed-top">
     <div class="container-fluid">
         <div class="navbar-wrapper">
           <a class="navbar-brand" href="javascript:void(0)">{{getTitle()}}</a>
@@ -55,11 +55,11 @@
             </ul>
         </div>
     </div>
-</nav>
+</nav> -->
 
-<!--
 
-<nav class="navbar navbar-transparent navbar-absolute">
+
+<!-- <nav class="navbar navbar-transparent navbar-absolute">
     <div class="container-fluid">
         <div class="navbar-header">
             <button mat-raised-button type="button" class="navbar-toggle" data-toggle="collapse" (click)="sidebarToggle()">
