--- a/Front---End/src/app/guild/guild.component.html
+++ b/Front---End/src/app/guild/guild.component.html
@@ -23,88 +23,88 @@
             <tbody>
                 <tr>
                     <td>
-                        <div class="form-check">
+                        <!-- <div class="form-check">
                             <label class="form-check-label">
                                 <input class="form-check-input" type="checkbox" value="" checked>
                                 <span class="form-check-sign">
                                     <span class="check"></span>
                                 </span>
                             </label>
-                        </div>
+                        </div> -->
                     </td>
-                    <td>Sign contract for "What are conference organizers afraid of?"</td>
-                    <td class="td-actions text-right">
+                    <td>BLUECURACAO</td>
+                    <!-- <td class="td-actions text-right">
                         <button mat-raised-button type="button" matTooltip="Edit Task" [matTooltipPosition]="'above'" class="btn btn-primary btn-link btn-sm btn-just-icon">
                             <i class="material-icons">edit</i>
                         </button>
                         <button mat-raised-button type="button" matTooltip="Remove" [matTooltipPosition]="'above'" class="btn btn-danger btn-link btn-sm btn-just-icon">
                             <i class="material-icons">close</i>
                         </button>
-                    </td>
+                    </td> -->
                 </tr>
                 <tr>
                     <td>
-                        <div class="form-check">
+                        <!-- <div class="form-check">
                             <label class="form-check-label">
                                 <input class="form-check-input" type="checkbox" value="">
                                 <span class="form-check-sign">
                                     <span class="check"></span>
                                 </span>
                             </label>
-                        </div>
+                        </div> -->
                     </td>
                     <td>Lines From Great Russian Literature? Or E-mails From My Boss?</td>
-                    <td class="td-actions text-right">
+                    <!-- <td class="td-actions text-right">
                         <button mat-raised-button type="button" matTooltip="Edit Task" [matTooltipPosition]="'above'" class="btn btn-primary btn-link btn-sm btn-just-icon">
                             <i class="material-icons">edit</i>
                         </button>
                         <button mat-raised-button type="button" matTooltip="Remove" [matTooltipPosition]="'above'" class="btn btn-danger btn-link btn-sm btn-just-icon">
                             <i class="material-icons">close</i>
                         </button>
-                    </td>
+                    </td> -->
                 </tr>
                 <tr>
                     <td>
-                        <div class="form-check">
+                        <!-- <div class="form-check">
                             <label class="form-check-label">
                                 <input class="form-check-input" type="checkbox" value="">
                                 <span class="form-check-sign">
                                     <span class="check"></span>
                                 </span>
                             </label>
-                        </div>
+                        </div> -->
                     </td>
                     <td>Flooded: One year later, assessing what was lost and what was found when a ravaging rain swept through metro Detroit
                     </td>
-                    <td class="td-actions text-right">
+                    <!-- <td class="td-actions text-right">
                         <button mat-raised-button type="button" matTooltip="Edit Task" [matTooltipPosition]="'above'" class="btn btn-primary btn-link btn-sm btn-just-icon">
                             <i class="material-icons">edit</i>
                         </button>
                         <button mat-raised-button type="button" matTooltip="Remove" [matTooltipPosition]="'above'" class="btn btn-danger btn-link btn-sm btn-just-icon">
                             <i class="material-icons">close</i>
                         </button>
-                    </td>
+                    </td> -->
                 </tr>
                 <tr>
                     <td>
-                        <div class="form-check">
+                        <!-- <div class="form-check">
                             <label class="form-check-label">
                                 <input class="form-check-input" type="checkbox" value="" checked>
                                 <span class="form-check-sign">
                                     <span class="check"></span>
                                 </span>
                             </label>
-                        </div>
+                        </div> -->
                     </td>
                     <td>Create 4 Invisible User Experiences you Never Knew About</td>
-                    <td class="td-actions text-right">
+                    <!-- <td class="td-actions text-right">
                         <button mat-raised-button type="button" matTooltip="Edit Task" [matTooltipPosition]="'above'" class="btn btn-primary btn-link btn-sm btn-just-icon">
                             <i class="material-icons">edit</i>
                         </button>
                         <button mat-raised-button type="button" matTooltip="Remove" [matTooltipPosition]="'above'" class="btn btn-danger btn-link btn-sm btn-just-icon">
                             <i class="material-icons">close</i>
                         </button>
-                    </td>
+                    </td> -->
                 </tr>
             </tbody>
         </table>
@@ -113,7 +113,7 @@
         <div class="col-md-12">
             <div class="card card-plain">
                 <div class="card-header card-header-danger">
-                    <h4 class="card-title mt-0"> User Ranking</h4>
+                    <h4 class="card-title mt-0"> Guild User Ranking</h4>
                     <p class="card-category"> Be the best, be yourself!!!</p>
                 </div>
                 <div class="card-body">
@@ -127,7 +127,7 @@
                                     Name
                                 </th>
                                 <th>
-                                    Company
+                                    City
                                 </th>
                                 <th>
                                     Country
@@ -145,7 +145,7 @@
                                         Yehonatan Shyam
                                     </td>
                                     <td>
-                                        IBM
+                                        Arad
                                     </td>
                                     <td>
                                         Romania
@@ -162,7 +162,7 @@
                                         William Cooper
                                     </td>
                                     <td>
-                                        Visma
+                                        Wien
                                     </td>
                                     <td>
                                         Austria
@@ -179,7 +179,7 @@
                                         Doris Greene
                                     </td>
                                     <td>
-                                        Atos
+                                        Barcelona
                                     </td>
                                     <td>
                                         Spain
