jwt interceptor added

--- a/Front---End/src/app/dashboard/dashboard.component.html
+++ b/Front---End/src/app/dashboard/dashboard.component.html
@@ -111,7 +111,19 @@
           </div>
       </div>
       <div class="row">
-        <button mat-raised-button type="submit" class="btn btn-danger pull-right">Start Workout</button>
+        <div class="col-lg-8 col-md-10 ml-auto mr-auto">
+            <div class="row">
+                <div class="col-md-4">
+                    <button mat-raised-button class="btn btn-danger btn-block" >Top Left</button>
+                </div>
+                <div class="col-md-4">
+                    <button mat-raised-button class="btn btn-danger btn-block" >Top Center</button>
+                </div>
+                <div class="col-md-4">
+                    <button mat-raised-button class="btn btn-danger btn-block" >Top Right</button>
+                </div>
+            </div>
+        </div>        
       </div>
   </div>
 </div>
