--- a/Front---End/src/app/components/navbar/navbar.component.html
+++ b/Front---End/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="auth.logedIn">
+<!-- <div *ngIf="auth.navbar"> -->
     <nav class="navbar navbar-expand-lg navbar-transparent  navbar-absolute fixed-top">
         <div class="container-fluid">
             <div class="navbar-wrapper">
@@ -33,4 +33,4 @@
             </div>
         </div>
     </nav> 
-</div>
+<!-- </div> -->
