--- a/Front---End/src/app/register/register.component.html
+++ b/Front---End/src/app/register/register.component.html
@@ -31,8 +31,8 @@
                         <input type="password" formControlName="password" class="form-control"  />
                     </div>
                     <div class="form-group">
-                        <label for="aboutMe">About Me</label>
-                        <input type="text" formControlName="aboutMe" placeholder="Funny description" class="form-control" />
+                        <label for="description">Description</label>
+                        <input type="text" formControlName="description" placeholder="Funny description" class="form-control" />
                     </div>
                     <div class="form-group">
                         <button [disabled]="loading" class="btn btn-primary">
